flask-stack/templates/celery-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  namespace: dangdangtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
      - name: celery-worker
        image: dangthbm2k4/chiatien-backend:latest
        command: ["celery", "-A", "celery_worker.celery", "worker", "--loglevel=info"]
