flask-stack/templates/flask-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-db
  namespace: dangdangtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-db
  template:
    metadata:
      labels:
        app: flask-db
    spec:
      containers:
      - name: flask-db
        image: postgres:16
        ports:
        - containerPort: 5432
        livenessProbe:
          exec:
            command: ["pg_isready", "-U", "postgres"]
          initialDelaySeconds: 10
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: flask-db-service
  namespace: dangdangtest
spec:
  selector:
    app: flask-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
